; ModuleID = '/home/carl/AnghaBench/linux/drivers/clk/ux500/extr_clk-sysctrl.c_clk_reg_sysctrl_set_parent.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/clk/ux500/extr_clk-sysctrl.c_clk_reg_sysctrl_set_parent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clk = type { i32 }
%struct.device = type { i32 }

@clk_sysctrl_set_parent_ops = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.clk* @clk_reg_sysctrl_set_parent(%struct.device* %0, i8* %1, i8** %2, i32 %3, i32* %4, i32* %5, i32* %6, i64 %7) #0 {
  %9 = alloca %struct.device*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8**, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i32*, align 8
  %16 = alloca i64, align 8
  store %struct.device* %0, %struct.device** %9, align 8
  store i8* %1, i8** %10, align 8
  store i8** %2, i8*** %11, align 8
  store i32 %3, i32* %12, align 4
  store i32* %4, i32** %13, align 8
  store i32* %5, i32** %14, align 8
  store i32* %6, i32** %15, align 8
  store i64 %7, i64* %16, align 8
  %17 = load %struct.device*, %struct.device** %9, align 8
  %18 = load i8*, i8** %10, align 8
  %19 = load i8**, i8*** %11, align 8
  %20 = load i32, i32* %12, align 4
  %21 = load i32*, i32** %13, align 8
  %22 = load i32*, i32** %14, align 8
  %23 = load i32*, i32** %15, align 8
  %24 = load i64, i64* %16, align 8
  %25 = call %struct.clk* @clk_reg_sysctrl(%struct.device* %17, i8* %18, i8** %19, i32 %20, i32* %21, i32* %22, i32* %23, i32 0, i32 0, i64 %24, i32* @clk_sysctrl_set_parent_ops)
  ret %struct.clk* %25
}

declare dso_local %struct.clk* @clk_reg_sysctrl(%struct.device*, i8*, i8**, i32, i32*, i32*, i32*, i32, i32, i64, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
